--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -1,7 +1,7 @@
 .about {
     grid-row: 2;
     grid-column: 2;
-
+    
     &__graphic {
         opacity: 0;
         animation: show 2s forwards;
@@ -29,6 +29,7 @@
             grid-column: 1 /3;
         }
         &-description {
+            z-index: 1;
             flex: 0 0 55%;
             height: 70%;
             margin-top: -4rem;
@@ -39,6 +40,7 @@
             opacity: 0;
             animation: show 2s forwards;
             animation-delay: 1s;
+            
             @media (max-width: 900px) {
                 padding-left: 10%;
                 padding-right: 10%;
@@ -58,9 +60,11 @@
                 }
             }
             &-nick {
+                
                 margin-right: -2rem;
                 margin-left: 2rem;
                 & div {
+                    background-color: $color-white;
                     @include flex-center;
                     width: 70%;
                     border: 1px solid $color-black;
@@ -68,12 +72,15 @@
                 }
             }
             &-abilities {
+                
                 & div {
                     border: 1px solid $color-black;
                     padding: .5rem;
+                    background-color: $color-white;
                 }
             }
             &-motto {
+                
                 margin-right: -2rem;
                 margin-left: 2rem;
             }
