--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -1,8 +1,10 @@
 .contact {
     grid-row: 2;
     grid-column: 2;
-
+    
     &__title {
+        z-index: 1;
+        background-color: $color-white;
         opacity: 0;
         animation: bump 1s forwards;
         animation-delay: 1.5s;
