--- a/src/styles/pages/_dev.scss
+++ b/src/styles/pages/_dev.scss
@@ -1,7 +1,6 @@
 .dev {
     grid-row: 2;
     grid-column: 2;
-
     &__projects {
         opacity: 0;
         animation: show 1s forwards;
@@ -48,7 +47,7 @@
         min-width: 50%;
         max-width: 200%;
         font-size: 2.1vh;
-        
+        background-color: white;
         @media (max-width: 900px) {
             height: 100%;
             border: none;
