--- a/src/styles/pages/_yoyo.scss
+++ b/src/styles/pages/_yoyo.scss
@@ -2,6 +2,7 @@
     grid-row: 2;
     grid-column: 2;
     &__title {
+        z-index: 2;
         @include flex-center;
         border: 2px solid $color-black;
         height: 60%;
@@ -33,7 +34,7 @@
         margin-right: 2rem;
         animation: show 4s forwards;
         animation-delay: 1.2s;
-        
+        background-color: $color-white;
         @media (max-width: 900px) {
             grid-column: 1/3;
             margin-left: 2rem;
